Changelog
=========

4.0a5 - unreleased
------------------


4.0a4 - 2010-10-06
------------------

- Avoid module global imports in our top-level ``__init__``. If you have
  accidentally imported any of the contents of the ``public`` module directly
  from ``Products.LinguaPlone``, you will need to adjust those to import from
  the ``public`` module instead. This closes
  http://plone.org/products/linguaplone/issues/253.
  [hannosch, ggozad, shh42]

4.0a3 - 2010-09-24
------------------

- Rewrote ``getTranslationReferences`` and ``getTranslationBackReferences``
  internals to avoid the catalog search API and make use of knowledge of its
  internals.
  [hannosch]

- In the TranslatableLanguageSelector only append a question mark, if there's
  a query string to append.
  [hannosch]

4.0a2 - 2010-09-08
------------------

- Make the ``set_language`` query string addition configurable via a class
  variable on the TranslatableLanguageSelector.
  [hannosch]

4.0a1 - 2010-07-28
------------------

- Added test for deleting canonical folders. Added minimum version requirement
  on Products.ATContentTypes 2.0.2 for the fix to
  http://plone.org/products/linguaplone/issues/241.
  [hannosch]

- Fixed language selector logic to correctly deal with all kinds of VHM rules.
  This closes http://plone.org/products/linguaplone/issues/240.
  [hannosch]

- Change the language selector viewlet to be shown in the IPortalHeader manager
  to be consistent with the new default location in Plone 4. This closes
  http://plone.org/products/linguaplone/issues/248.
  [hannosch]

- Require at least Zope 2.12.5 and remove the `-C` work around.
  [hannosch]

- Renamed migrations module to upgrades to match current nomenclature.
  [hannosch]

- Removed Archetypes uid and reference catalog GenericSetup handlers. These
  are part of Archetypes now.
  [hannosch]

- Removed Plone 3.3 specific tests.
  [hannosch]

- Added tests for all upgrade steps.
  [hannosch]
